fixed some spacing issues

--- a/src/components/Roadmap.css
+++ b/src/components/Roadmap.css
@@ -71,7 +71,7 @@
 
   @media (max-width: 950px) {
    .dotted-border {
-    margin-right: 5em;
+    margin-right: 6em;
    }
    
    
